Bug 309439 - Some downloaded scenarios won't show up
Summary: Some downloaded scenarios won't show up
Status: RESOLVED FIXED
Alias: None
Product: simon
Classification: Unmaintained
Component: simon (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Peter Grasch
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-11-02 19:09 UTC by Florian Reinhard
Modified: 2012-11-04 18:02 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Florian Reinhard 2012-11-02 19:09:10 UTC
Steps to reproduce:
* start simon and proceed to "Scenarios" configuration page
* install "[DE/VF] Firefox" by bedhar via hot-new-stuff / "download"
* wonder why it won't show up

optional:
* use "Import from file"
* navigate to ".kde/share/apps/simon/scenarios/[DE/"
* open "VF] Firefox" and wonder again why it won't show up
Comment 1 Florian Reinhard 2012-11-02 20:53:48 UTC
looks like this only happens for assistant for the very first start. the main window later shows all previously installed scenarios.
Comment 2 Peter Grasch 2012-11-04 18:02:27 UTC
Git commit 9240f86dfd6e8df932b2dec184e8f911a159a8eb by Peter Grasch.
Committed on 04/11/2012 at 18:57.
Pushed by grasch into branch 'master'.

General bugfixing in the scenario management dialog

Schedule deletion of files instead of deleting them right away. This
cures the problem where the user would delete an active scenario, cancel
the dialog (not saving changes to the list of selected scenarios) which
left Simon in an undefined state.
Correctly track explosion of packed scenarios (compressed hierarchies
when importing Scenarios through ghns): Scenarios can now again be
deleted from within the GHNS dialog.
Scenario files are now also correctly named when importing through GHNS

M  +15   -4    simonlib/simonscenarios/scenario.cpp
M  +1    -0    simonlib/simonscenarios/scenario.h
M  +115  -80   simonlib/simonscenarioui/scenariomanagementwidget.cpp
M  +7    -0    simonlib/simonscenarioui/scenariomanagementwidget.h

http://commits.kde.org/simon/9240f86dfd6e8df932b2dec184e8f911a159a8eb