General bugfixing in the scenario management dialog

Schedule deletion of files instead of deleting them right away. This
cures the problem where the user would delete an active scenario, cancel
the dialog (not saving changes to the list of selected scenarios) which
left Simon in an undefined state.
Correctly track explosion of packed scenarios (compressed hierarchies
when importing Scenarios through ghns): Scenarios can now again be
deleted from within the GHNS dialog.
Scenario files are now also correctly named when importing through GHNS

BUG: 309439